# Keemu

./: GETTING_STARTED.md  PROJECT_STATUS.md  prd.md  readme.md
backend/: .gitignore  Dockerfile  Makefile  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PRODUCTION_READINESS_SUMMARY.md  README.md  TESTING_GUIDE.md  VERIFY_PRODUCTION_READINESS.md  alembic.ini  celerybeat-schedule  docker-compose.yml  env_template  pyproject.toml  test_db_connection.py  test_user_models.py
backend/alembic/: env.py
backend/alembic/versions/: 2025-10-03_2302-b599d122034a_add_users_and_user_preferences_tables.py  2025-10-03_2346-0ea0f3dafa56_update_timestamps_to_timezone_aware.py  2025-10-03_2347-91a2e5c46f1c_update_last_login_to_timezone_aware.py  2025-10-04_0007-0b0b03ab19f5_add_content_sources_table.py  2025-10-04_0724-9aae404a44eb_add_channels_user_subscriptions_and_.py  2025-10-05_1911-3cec1d1491c3_add_hashed_password_to_users.py  2025-11-01_0000-add_rag_models.py  2025-11-23_0000-update_vector_dimension_to_384.py  2025-11-23_0056-ac7d48de72ae_add_text_search_vector_to_content_chunks.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: auth.py  config.py  env_validation.py  google_oauth.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  deps.py  redis.py  session.py
backend/app/models/: __init__.py  content.py  conversation.py  user.py
backend/app/schemas/: __init__.py  auth.py  blog.py  chat.py  reddit.py  youtube.py
backend/app/services/: __init__.py  blog_service.py  content_query.py  quota_tracker.py  reddit.py  reddit_quota_tracker.py  transcript_service.py  youtube.py
backend/app/tasks/: __init__.py  blog_tasks.py  embedding_tasks.py  quota_helpers.py  reddit_quota_helpers.py  reddit_tasks.py  youtube_tasks.py
backend/app/workers/: __init__.py  celery_app.py
backend/docker/: init-db.sql
backend/project_docs/: API_SETUP_GUIDE.md  DB_QUICK_REFERENCE.md  EMBEDDING_TASKS_GUIDE.md  PHASE_2_CELERY_TASKS_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_3_RETRIEVAL_COMPLETE.md  PHASE_3_SUMMARY.md  PHASE_4_GENERATION_COMPLETE.md  PROJECT_STATUS.md  RAG_SYSTEM_COMPLETE.md  REDDIT_QUICK_START.md  TASK_2_1_SUMMARY.md  TASK_2_2_SUMMARY.md  TASK_2_3_SUMMARY.md  TASK_2_4_SUMMARY.md  TASK_3_1_AUTHENTICATION_GUIDE.md  TASK_3_2_AUTH_TESTING_COMPLETE.md  TASK_3_3_MANUAL_AUTH_TESTS.md  TASK_4_1_SUMMARY.md  TASK_4_1_YOUTUBE_SERVICE.md  TASK_4_2_SUMMARY.md  TASK_4_3_CELERY_TASKS.md  TASK_4_3_SUMMARY.md  TASK_4_4_4_5_SUMMARY.md  TASK_4_6_SUMMARY.md  TASK_5_COMPLETE.md  TASK_6_COMPLETE.md  TASK_6_TEST_RESULTS.md  TASK_7_RAG_PROGRESS.md  TROUBLESHOOTING.md
backend/scripts/: test_embedding_pipeline.py
backend/tests/: conftest.py  test_auth.py
backend/tests/integration/: __init__.py  test_api_endpoints.py  test_database_operations.py  (+1 more)
(+32 files in other folders)
